fixed triangle issue on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,7 @@ textarea::placeholder,
     background-color: var(--main-grey);
     background-image: url('../images/Dreieck.svg');
     background-repeat: no-repeat;
+    background-size: 100% 100%;
     padding-bottom: 7rem;
     margin-top: -2rem;
     display: inherit;
